update types request
